force-app/main/default/objects/redwing__LMS_Settings__c/fields/redwing__Learning_Object_Filter_Field_Set_Name__c.field-meta.xml
<CustomField>
    <fullName>redwing__Learning_Object_Filter_Field_Set_Name__c</fullName>
    <inlineHelpText>Field Set on User object to add new fields to Manage Assignments page for Learning Objects</inlineHelpText>
    <label>Learning Object Filter Field Set Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>