force-app/main/default/objects/redwing__LMS_Settings__c/fields/redwing__Learning_Search_Field_Set_Name__c.field-meta.xml
<CustomField>
    <fullName>redwing__Learning_Search_Field_Set_Name__c</fullName>
    <inlineHelpText>Field Set on Learning Object to override fields used for Search of Learning records in builders. If empty, search works by Title and Description fields.</inlineHelpText>
    <label>Learning Search Field Set Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>