force-app/main/default/objects/redwing__LMS_Settings__c/fields/redwing__Learning_Trac_Builder_Field_Set_Name__c.field-meta.xml
<CustomField>
    <fullName>redwing__Learning_Trac_Builder_Field_Set_Name__c</fullName>
    <inlineHelpText>Field Set on Learning Trac object to add additional fields to Detail tab in the Learning Trac builder.</inlineHelpText>
    <label>Learning Trac Builder Field Set Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>