force-app/main/default/objects/redwing__LMS_Settings__c/fields/redwing__MA_User_Information_Field_Set_Name__c.field-meta.xml
<CustomField>
    <fullName>redwing__MA_User_Information_Field_Set_Name__c</fullName>
    <label>MA User Information Field Set Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>