force-app/main/default/objects/redwing__LMS_Settings__c/fields/redwing__Media_Item_Builder_Field_Set_Name__c.field-meta.xml
<CustomField>
    <fullName>redwing__Media_Item_Builder_Field_Set_Name__c</fullName>
    <label>Media Item Builder Field Set Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>