force-app/main/default/objects/redwing__LMS_Settings__c/fields/redwing__My_Team_Filter_Field_Set_Name__c.field-meta.xml
<CustomField>
    <fullName>redwing__My_Team_Filter_Field_Set_Name__c</fullName>
    <inlineHelpText>Field Set on User object to add new filter fields to Manage Assignments page within My Team</inlineHelpText>
    <label>My Team Filter Field Set Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>