force-app/main/default/objects/redwing__LMS_Settings__c/fields/redwing__My_Team_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>redwing__My_Team_Hierarchy__c</fullName>
    <inlineHelpText>Defines Hierarchy Type for My Team functionality for External Users. The following values can be used: &quot;Role hierarchy&quot;, &quot;Manager field&quot;, &quot;Account Power Users&quot;, Api Name of custom lookup field on the User object or Api Name of custom apex class.</inlineHelpText>
    <label>My Team External User Hierarchy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>