force-app/main/default/objects/redwing__LMS_Settings__c/fields/redwing__New_Achievement_Assignment_For_Renewal__c.field-meta.xml
<CustomField>
    <fullName>redwing__New_Achievement_Assignment_For_Renewal__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enable this option if you would like new Achievement Assignment record to be created when user renews an achievement. If unchecked, existing Achievement Assignment record will be updated.</inlineHelpText>
    <label>New Achievement Assignment for Renewal</label>
    <type>Checkbox</type>
</CustomField>