force-app/main/default/objects/redwing__LMS_Settings__c/fields/redwing__Plan_Builder_Field_Set_Name__c.field-meta.xml
<CustomField>
    <fullName>redwing__Plan_Builder_Field_Set_Name__c</fullName>
    <label>Plan Builder Field Set Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>