force-app/main/default/objects/redwing__LMS_Settings__c/fields/redwing__Printable_Certificate_Title__c.field-meta.xml
<CustomField>
    <fullName>redwing__Printable_Certificate_Title__c</fullName>
    <inlineHelpText>Defines what will be displayed on the Printable Certificate. The following values can be used: &quot;Achievement Name&quot;, &quot;Acquisition Rule Name&quot;, or &quot;Learning Name&quot;. If empty, Achievement Name will be used by default.</inlineHelpText>
    <label>Printable Certificate Title</label>
    <length>40</length>
    <type>Text</type>
</CustomField>