force-app/main/default/objects/redwing__LMS_Settings__c/fields/redwing__Register_Learning_Plans_upon_Launch__c.field-meta.xml
<CustomField>
    <fullName>redwing__Register_Learning_Plans_upon_Launch__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, users will be able to register for a Learning Plan by clicking on a learning from the Learning Plan Activity component. (Does not work for e-commerce.)</inlineHelpText>
    <label>Register Learning Plans upon Launch</label>
    <type>Checkbox</type>
</CustomField>