force-app/main/default/objects/redwing__LMS_Settings__c/fields/redwing__Related_Learning_Processing_Interval__c.field-meta.xml
<CustomField>
    <fullName>redwing__Related_Learning_Processing_Interval__c</fullName>
    <defaultValue>30</defaultValue>
    <inlineHelpText>Stores a value in minutes which indicates the frequency of running the Related Learning Assignment Requests job. If this field is empty, then by default an interval of 30 minutes is used.</inlineHelpText>
    <label>Related Learning Processing Interval</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>