force-app/main/default/objects/redwing__LMS_Settings__c/fields/redwing__Resize_To_Fit_Images__c.field-meta.xml
<CustomField>
    <fullName>redwing__Resize_To_Fit_Images__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enable this option to resize to fit background images used across the app</inlineHelpText>
    <label>Resize To Fit Images</label>
    <type>Checkbox</type>
</CustomField>