force-app/main/default/objects/redwing__LMS_Settings__c/fields/redwing__Show_Salesforce_Header__c.field-meta.xml
<CustomField>
    <fullName>redwing__Show_Salesforce_Header__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enable this option to show the Salesforce header for the end-user training pages</inlineHelpText>
    <label>Show Salesforce Header</label>
    <type>Checkbox</type>
</CustomField>