force-app/main/default/objects/redwing__LMS_Settings__c/fields/redwing__Show_SF_Header_In_Mobile__c.field-meta.xml
<CustomField>
    <fullName>redwing__Show_SF_Header_In_Mobile__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enable this option to display the SF Header in mobile devices</inlineHelpText>
    <label>Show SF Header in Mobile</label>
    <type>Checkbox</type>
</CustomField>