force-app/main/default/objects/redwing__LMS_Settings__c/fields/redwing__Track_Learning_Object_Launch_Attempts__c.field-meta.xml
<CustomField>
    <fullName>redwing__Track_Learning_Object_Launch_Attempts__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enable this option to track launch attempts everytime a learning object is launched</inlineHelpText>
    <label>Track Learning Object Launch Attempts</label>
    <type>Checkbox</type>
</CustomField>