force-app/main/default/objects/redwing__LMS_Settings__c/fields/redwing__Training_Payment_URL__c.field-meta.xml
<CustomField>
    <fullName>redwing__Training_Payment_URL__c</fullName>
    <inlineHelpText>URL for processing payments for payment-enabled Learning Plans</inlineHelpText>
    <label>Training Payment URL</label>
    <length>150</length>
    <type>Text</type>
</CustomField>