force-app/main/default/objects/redwing__LMS_Settings__c/fields/redwing__Video_Components_Namespace__c.field-meta.xml
<CustomField>
    <fullName>redwing__Video_Components_Namespace__c</fullName>
    <inlineHelpText>Namespace used for loading video components</inlineHelpText>
    <label>Video Components Namespace</label>
    <length>15</length>
    <type>Text</type>
</CustomField>