force-app/main/default/objects/redwing__LMS_Settings__c/fields/redwing__vILT_Attendance_Processing_Interval__c.field-meta.xml
<CustomField>
    <fullName>redwing__vILT_Attendance_Processing_Interval__c</fullName>
    <inlineHelpText>The frequency of how often the vILTMeetingReportsBatch job runs (in minutes). By default, the interval is 1440 minutes (1 day).</inlineHelpText>
    <label>vILT Attendance Processing Interval</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>