force-app/main/default/objects/redwing__LMS_Settings__c/fields/redwing__Withdraw_Inactive_Users_from_ILT_Classes__c.field-meta.xml
<CustomField>
    <fullName>redwing__Withdraw_Inactive_Users_from_ILT_Classes__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, the deactivated users will be automatically withdrawn from future ILT Classes.</inlineHelpText>
    <label>Withdraw Inactive Users from ILT Classes</label>
    <type>Checkbox</type>
</CustomField>